test/fails/bad_functions/return_type1.lgl
int f() {
    return 5;
}

void main() {
    bool x = f();
}